[package]
name = "mio-utun"
version = "0.6.8"
authors = ["Jake McGinty <me@jake.su>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/mcginty/mio-utun"
homepage = "https://github.com/mcginty/mio-utun"
documentation = "https://docs.rs/mio-utun"
description = """
Utun bindings for mio
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "mcginty/mio-utun" }

[dependencies]
byteorder = "^1.2"
mio = "^0.6"
nix = "^0.9"

